--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -99,3 +99,26 @@ a {
   text-shadow: rgba(0, 0, 0, 0.9) 1px 2px 9px;
   font-size: 40px;
 }
+
+
+@media all and (min-width: 768px) {
+  .main-content {
+    flex-direction: row;
+    overflow: hidden;
+  }
+  .thumbnail-list {
+    flex-direction: column;
+    order: 0;
+  }
+  .thumbnail-item {
+    max-width: 260px;
+  }
+  .thumbnail-item + .thumbnail-item {
+    margin-top: 20px;
+  }
+}
+@media all and (max-width: 732px) and (orientation: landscape){
+  .detail-image {
+    width: 48%;
+  }
+}
