--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -52,6 +52,10 @@ a {
   max-width: 120px;
   border: 1px solid rgb(100%, 100%, 100%);
   border: 1px solid rgba(100%, 100%, 100%, 0.8);
+  transition: transform 133ms ease-in-out;
+}
+.thumbnail-item:hover {
+    transform: scale(1.2);
 }
 .thumbnail-list {
   flex: 0 1 auto;
@@ -59,7 +63,7 @@ a {
   display: flex;
   justify-content: space-between;
   list-style: none;
-  padding: 0;
+  padding: 20px 0;
   white-space: nowrap;
   overflow-x: auto;
 }
@@ -86,6 +90,12 @@ a {
 .detail-image-frame {
   position: relative;
   text-align: center;
+
+  transition: transform 333ms;
+}
+.istiny {
+  transform: scale(0.001);
+  transition: transform 0ms;
 }
 .detail-image {
   width: 90%;
@@ -99,6 +109,16 @@ a {
   text-shadow: rgba(0, 0, 0, 0.9) 1px 2px 9px;
   font-size: 40px;
 }
+.hidden-detail .detail-image-container {
+  display: none;
+}
+.hidden-detail .thumbnail-list {
+  flex-direction: column;
+  align-items: center;
+}
+.hidden-detail .thumbnail-item {
+  max-width: 80%;
+}
 
 
 @media all and (min-width: 768px) {
@@ -109,6 +129,8 @@ a {
   .thumbnail-list {
     flex-direction: column;
     order: 0;
+    margin-left: 20px;
+    padding: 0 35px;
   }
   .thumbnail-item {
     max-width: 260px;
